Add fingerprint-terminal devices and idempotent punch ingestion
Devices as records (name, serial, address, own timezone, lastSeenAt)
so a terminal that quietly stops reporting is visible as a fact about
the device rather than indistinguishable from a month nobody worked.

AttendanceService#ingestDevicePunch is the idempotency boundary: a
punch is identified by device + enrollment number + its own
timestamp, and a duplicate is checked for before the insert rather
than caught after - catching DataIntegrityViolationException here
would still mark the transaction rollback-only (the nested
saveAndFlush's own interception does that before any outer catch
runs), even under REQUIRES_NEW. The unique constraint stays as a
backstop for a genuine race, not the primary mechanism. Also fixes a
latent Map.of().get(null) NPE in resolveEmails, only ever exposed by
a null recordedByUserId - which a SCANNER-sourced punch is the first
thing in this codebase to produce.

Also records the device's own punchAt timestamp separately from
AttendancePunch's existing createdAt (already present, no schema
change needed) so device clock drift is diagnosable months later.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>